Add: convert btn

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -2,5 +2,8 @@
 <html lang="en">
 <body>
   <h1>HTML2PDF</h1>
+  <button id="convert"></button>
+
+  <script src="popup.js"></script>
 </body>
 </html>
